# Web-CCExtractor

./: .env  Dockerfile  captions.json  creds.csv  docker-compose.yaml  init_tables.sh  pyproject.toml  test.py  users.json
config/: gunicorn.py
nginx/: Dockerfile  nginx.conf
stream_flask/: app.py
stream_flask/templates/: base.html  captions.html  index.html  login.html  search.html  signup.html
